Customize debian folder

--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,18 @@
 Source: cmake4epics
-Section: unknown
+Section: devel
 Priority: optional
 Maintainer: Konrad Martin <konrad@frib.msu.edu>
 Build-Depends: debhelper (>= 9), cmake
-Standards-Version: 3.9.5
-Homepage: <insert the upstream URL, if relevant>
-#Vcs-Git: git://anonscm.debian.org/collab-maint/cmake4epics.git
-#Vcs-Browser: http://anonscm.debian.org/?p=collab-maint/cmake4epics.git;a=summary
+Standards-Version: 3.9.6
+Homepage: https://github.com/mdavidsaver/cmake4epics
+Vcs-Git: https://github.com/mdavidsaver/cmake4epics.git
+Vcs-Browser: https://github.com/mdavidsaver/cmake4epics
 
 Package: cmake4epics
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Recommends: epics-dev
+Description: Building EPICS Modules with CMake
+ A set of CMake modules that enables developers to build EPICS
+ applications like IOCs as well as libraries like device support
+ modules using CMake. Cross-builds are supported as well.
