--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Vcs-Browser: https://github.com/mdavidsaver/cmake4epics
 
 Package: cmake4epics
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${misc:Depends}
 Recommends: epics-dev
 Description: Building EPICS Modules with CMake
  A set of CMake modules that enables developers to build EPICS
